switches narrower, pallete wider, to avoid linewrap

--- a/app/styles/layouts/_l-default.scss
+++ b/app/styles/layouts/_l-default.scss
@@ -66,7 +66,7 @@ body {
   }
 
   @include breakpoint(xlarge) {
-    width: calc(100% - 17.5rem);
+    width: calc(100% - 18rem);
   }
 }
 
@@ -91,7 +91,7 @@ body {
   }
 
   @include breakpoint(xlarge) {
-    width: 17.5rem;
+    width: 18rem;
   }
 }
 
